After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777595 - Fix various bugs detected by Coverity
Fix various bugs detected by Coverity
Status: RESOLVED FIXED
Product: gspell
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gspell maintainers
gspell maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-22 02:21 UTC by Garrett Regier
Modified: 2017-01-22 09:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
checker: Fix potential resource leaks (2.07 KB, patch)
2017-01-22 02:22 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2017-01-22 02:21:33 UTC
.
Comment 1 Garrett Regier 2017-01-22 02:22:07 UTC
Created attachment 343967 [details] [review]
checker: Fix potential resource leaks
Comment 2 Sébastien Wilmet 2017-01-22 09:07:42 UTC
Review of attachment 343967 [details] [review]:

Thanks indeed it's a little better like this.
Comment 3 Garrett Regier 2017-01-22 09:19:20 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.