checker: Fix potential resource leaks

Detected by Coverity

https://bugzilla.gnome.org/show_bug.cgi?id=777595